--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,6 @@ Blog
 About
 ionic_test/.gitignore at main · pg-88/ionic_test
 test-app/src/environments/environment.ts
+test-app/src/environments/environment.ts
+test-app/src/environments/environment.ts
+test-app/src/environments/environment.ts
